# GrooveSim

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: pages.yml
docs/: groove_requirements.md
examples/: make_example_midi.py  simple_onsets.json  simple_pattern.mid
site/: config.js  index.html
src/groovesim/: __init__.py  audio.py  beat_tracker.py  cli.py  features.py  midi.py  pipeline.py  scoring.py  symbolic.py  webapp.py
src/groovesim/web/: index.html
tests/: test_pipeline.py
